--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-/*
-div {
-    margin: 10px;
-    padding: 10px;
-    border: 2px solid black;
-    border-radius: 15px;
-}
-*/
-
 #main-heading {
     font-size: 2.5em;
     font-weight: bold;
@@ -14,7 +5,7 @@ div {
     padding: 10px;
 }
 
-.scoreboard {
+#scoreboard {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -29,35 +20,36 @@ div {
     text-align: center;
 }
 
-.scoreboard .player-name, .scoreboard .player-score {
+#scoreboard .player-name, #scoreboard .player-score {
     padding: 10px;
 }
 
-.gameboard {
+#gameboard {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.gameboard .round-info {
+#gameboard #round-info {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-around;
+    align-items: center;
+    text-align: center;
     font-size: 1.1em;
-    padding: 10px;
+    margin: 10px;
     height: 12vh;
     width: 30%;
 }
 
-.gameboard .buttons {
+#gameboard #buttons {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.gameboard .buttons .game-buttons {
+#gameboard #buttons .game-buttons {
     width: 120px;
     margin: 10px;
     padding: 10px;
@@ -66,22 +58,42 @@ div {
     cursor: pointer;
 }
 
-.game-buttons:hover {
+#game-buttons:hover {
     background-color: rgb(41, 41, 41);
     color: white;
 }
 
-.console-container {
+#console-container {
     display: flex;
     justify-content: center;
 }
 
-.console {
+#console-wrapper {
+    padding: 10px;
     margin: 20px;
     border: 2px solid black;
     border-radius: 15px;
-    height: 45vh;
+    height: 40vh;
     width: 40vw;
     min-width: 180px;
+}
+
+#console {
+    height: 100%;
+    width: 100%;
     overflow: auto;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track-piece {
+    background-color: lightgrey;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border: 1px solid darkgrey;
+    border-radius: 20px;
 }
