--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,24 @@
+h3 {
+    font-size:1.5em;
+    font-weight: medium;
+}
+
+@media (max-width: 550px) {
+    h3 {
+        font-size: 1.1em;
+        font-weight: medium;
+    }
+}
+
+@media (max-width: 400px) {
+    #instruction {
+        font-size: 0.7em;
+    }
+}
+
 #main-heading {
     font-size: 2.5em;
-    font-weight: bold;
+    font-weight: bolder;
     text-align: center;
     padding: 10px;
 }
@@ -56,9 +74,11 @@
     border: 2px solid black;
     border-radius: 2px;
     cursor: pointer;
+    transition: background-color;
+    transition-duration: 0.2s;
 }
 
-#game-buttons:hover {
+.hover-effect:hover {
     background-color: rgb(41, 41, 41);
     color: white;
 }
