--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,8 @@ h3 {
     border: 2px solid black;
     border-radius: 15px;
     height: 40vh;
-    width: 40vw;
-    min-width: 180px;
+    width: 500px;
+    min-width: 150px;
 }
 
 #console {
